# auto_linter

./: .auto_lint_history  .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PRD.md  QWEN.md  README.md  SKILL.md  TEST.md  auto_linter.config.yaml  auto_linter.config.yaml.example  coverage.json  debug_lint.py  install.ps1  install.sh  mcp.json  mypy.ini  pyproject.toml  report.json  verify_aes.py
.github/workflows/: ci.yml  publish.yml
auto_linter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: DESKTOP_COMMANDER_INTEGRATION.md
scripts/: desktop-commander-http-wrapper.js
src/: __init__.py
src/agent/: dependency_injection_container.py  lifecycle_state_manager.py  multi_project_orchestrator.py  pipeline_execution_orchestrator.py  tracking_job_registry.py
src/auto_linter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bootstrap/: container.py
src/capabilities/: call_chain_analyzer.py  data_flow_analyzer.py  hooks_management_actions.py  linting_analysis_actions.py  linting_governance_adapter.py  linting_report_formatters.py  naming_variant_generator.py  scope_boundary_analyzer.py  semantic_scope_analyzer.py
src/infrastructure/: __init__.py  config_json_provider.py  config_validation_provider.py  desktop_commander_adapter.py  git_diff_scanner.py  git_hooks_manager.py  http_request_client.py  javascript_call_tracer.py  javascript_flow_tracker.py  javascript_linter_adapter.py  javascript_naming_variants.py  javascript_scope_detector.py  javascript_scope_patterns.py  linting_governance_adapter.py  path_normalization_util.py  plugin_system.py  python_analysis_adapters.py  python_ast_tracer.py  python_bandit_adapter.py  python_linter_adapters.py  python_mypy_adapter.py  python_ruff_adapter.py  stdio_transport_client.py  unix_socket_client.py
src/surfaces/: cli_analysis_commands.py  cli_core_commands.py  cli_dev_commands.py  cli_main_entry.py  cli_maintenance_commands.py  cli_setup_commands.py  cli_watch_commands.py  mcp_command_catalog.py  mcp_desktop_client.py  mcp_execute_command.py  mcp_health_check.py  mcp_job_management.py  mcp_server_entry.py  mcp_tools_registry.py
src/taxonomy/: __init__.py  config_identifier_vo.py  config_provider_error.py  config_setting_vo.py  lint_adapter_error.py  (+10 more)
tests/: conftest.py  test_agent_full.py  test_cli_commands.py  test_cli_dev_commands.py  test_final_100_percent.py  test_final_coverage_push.py  test_hard_to_reach_lines.py  test_mcp_health_check.py  test_mcp_job_management.py  test_mcp_tools_registry.py  test_protocols.py
(+151 files in other folders)
