[project]
name = "auto-linter"
version = "1.6.0"
dependencies = [
    "click",
    "pydantic",
    "python-dotenv",
    "mcp",
    "fastmcp",
    "pyyaml",
    "toml",
]

[project.scripts]
auto-lint = "surfaces.cli_main_entry:main"

[tool.auto_linter]
project_name = "test-project"
thresholds = { score = 95.0, complexity = 5 }
adapters = ["ruff", "mypy"]
