[project]
name = "auto-linter"
version = "1.6.1"
dependencies = [
    "click",
    "pydantic",
    "python-dotenv",
    "mcp",
    "fastmcp",
    "pyyaml",
    "toml",
    "watchdog",
]

[project.scripts]
auto-lint = "surfaces.cli_main_entry:main"

[tool.auto_linter]
project_name = "test-project"
thresholds = { score = 95.0, complexity = 5 }
adapters = ["ruff", "mypy", "bandit", "radon", "governance"]
