[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-linter"
version = "1.6.8"
description = "MCP server for autonomous linting and governance auditing"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Raka Arwaky", email = "arwaky90@gmail.com"}
]
keywords = ["mcp", "linting", "governance", "ruff", "mypy", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp[cli]",
    "fastmcp",
    "pydantic",
    "ruff",
    "mypy",
    "click",
    "watchdog",
    "httpx>=0.27.0",
    "pyyaml",
    "python-dotenv",
    "toml",
]

[project.urls]
Homepage = "https://github.com/rakaarwaky/auto-linter"
Repository = "https://github.com/rakaarwaky/auto-linter"
"Install (Linux/macOS)" = "https://raw.githubusercontent.com/rakaarwaky/auto-linter/main/install.sh"
"Install (Windows)" = "https://raw.githubusercontent.com/rakaarwaky/auto-linter/main/install.ps1"

[project.scripts]
auto-linter = "surfaces.mcp_server_entry:main"
auto-lint = "surfaces.cli_main_entry:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pyre-check",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent", "capabilities", "infrastructure", "surfaces", "taxonomy"]
exclude = ["tests*"]
namespaces = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

